--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "shopifyr"]
+	path = shopifyr
+	url = https://github.com/charliebone/shopifyr
+	shallow = true
+	registered = true
